@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2006,v 1.2061 2006/12/27 12:26:05 joerg Exp $
+$NetBSD: CHANGES-2006,v 1.2062 2006/12/27 13:42:07 wulf Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -5709,3 +5709,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated ham/xlog to 1.4 [wulf 2006-12-27]
 	Added x11/libXScrnSaver version 1.1.2 [joerg 2006-12-27]
 	Added x11/libXxf86dga version 1.0.1 [joerg 2006-12-27]
+	Updated www/bluefish to 1.0.6 [wulf 2006-12-27]
